--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "AnimatedHeader",
   "version": "0.0.1",
-  "homepage": "https://github.com/leonciokof/AnimatedHeader",
+  "homepage": "https://github.com/codrops/AnimatedHeader",
   "authors": [
-    "Leonardo Gatica <lgaticastyle@gmail.com>"
+    "botelho <http://tympanus.net/codrops>"
   ],
   "description": "A fixed header that will animate its size on scroll. The inner elements will also adjust their size with a transition.",
   "main": "js/cbpAnimatedHeader.min.js",
